sfSandBoxCode/force-app/main/default/objects/Opportunity_History_Records__c/Opportunity_History_Records__c.object-meta.xml
<CustomObject>
    <description>The history records of the opportunity object</description>
    <label>Opportunity History Record</label>
    <nameField>
        <displayFormat>OHR-{0000}</displayFormat>
        <label>Opportunity History Records Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity History Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>