sfSandBoxCode/force-app/main/default/objects/Opportunity_History_Records__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>