sfSandBoxCode/force-app/main/default/objects/Opportunity_History_Records__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>