sfSandBoxCode/force-app/main/default/objects/Opportunity_History_Records__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>